--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -38,6 +38,58 @@ msgstr "UPC Today"
 msgid "more_news_link"
 msgstr "More news"
 
+msgid "FullNews"
+msgstr "News with picture"
+
+msgid "NoticiesPropi"
+msgstr "News"
+
+msgid "AgendaGW"
+msgstr "Agenda"
+
 msgid "label_full_size"
 msgstr "Full-size image:"
+
+msgid "portlet_homepage_title"
+msgstr "Wellcome"
+
+msgid "portlet_calendar_title"
+msgstr "Calendar"
+
+msgid "portlet_collection_title"
+msgstr "Collection"
+
+msgid "portlet_login_title"
+msgstr "Identification"
+
+msgid "portlet_navigation_title"
+msgstr "Navigation menu"
+
+msgid "portlet_rss_title"
+msgstr "RSS"
+
+msgid "portlet_static_title"
+msgstr "Page"
+
+msgid "portlet_poll_title"
+msgstr "Survey"
+
+#: plone/app/event/portlets/portlet_calendar.py:218
+msgid "This portlet displays events in a calendar."
+msgstr ""
+
+#. Default: "Select search base folder to search for events. This folder will also be used to link to in calendar searches. If empty, the whole site will be searched and the event listing view will be called on the site root."
+#: plone/app/event/portlets/portlet_calendar.py:42
+#: plone/app/event/portlets/portlet_events.py:43
+msgid "portlet_help_search_base"
+msgstr ""
+
+#: plone.portlet.collection/plone/portlet/collection/collection.py:71
+msgid "Exclude the Current Context"
+msgstr ""
+
+#: plone.portlet.collection/plone/portlet/collection/collection.py:72
+msgid "If enabled, the listing will not include the current item the portlet is rendered for if it otherwise would be."
+msgstr ""
+
 
