--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -338,3 +338,58 @@ msgstr "Quizás estabas buscando..."
 msgid "label_full_size"
 msgstr "Tamaño original imagen:"
 
+msgid "FullNews"
+msgstr "Noticias con foto"
+
+msgid "NoticiesPropi"
+msgstr "Noticias"
+
+msgid "AgendaGW"
+msgstr "Agenda"
+
+msgid "portlet_homepage_title"
+msgstr "Bienvenido"
+
+msgid "portlet_calendar_title"
+msgstr "Calendario"
+
+msgid "portlet_collection_title"
+msgstr "Colección"
+
+msgid "portlet_login_title"
+msgstr "Identificación"
+
+msgid "portlet_navigation_title"
+msgstr "Menú de navegación"
+
+msgid "portlet_rss_title"
+msgstr "RSS"
+
+msgid "portlet_static_title"
+msgstr "Página"
+
+msgid "portlet_poll_title"
+msgstr "Encuesta"
+
+#: plone/app/event/portlets/portlet_calendar.py:218
+msgid "This portlet displays events in a calendar."
+msgstr "Este portlet muestra los eventos de un calendario"
+
+#. Default: "Select search base folder to search for events. This folder will also be used to link to in calendar searches. If empty, the whole site will be searched and the event listing view will be called on the site root."
+#: plone/app/event/portlets/portlet_calendar.py:42
+#: plone/app/event/portlets/portlet_events.py:43
+msgid "portlet_help_search_base"
+msgstr ""
+"Seleccionar la carpeta dónde buscar los eventos. Esta carpeta será la que se "
+"use para enlazar las búsquedas. Si no se especifica, la búsqueda se "
+"realizará en todo el sitio y la lista de eventos se llamará desde la raíz. "
+
+#: plone.portlet.collection/plone/portlet/collection/collection.py:71
+msgid "Exclude the Current Context"
+msgstr "Excluir el contexto actual"
+
+#: plone.portlet.collection/plone/portlet/collection/collection.py:72
+msgid "If enabled, the listing will not include the current item the portlet is rendered for if it otherwise would be."
+msgstr "Si se activa, la lista no incluirá el elemento actual. El portlet se renderiza por si de lo contrario se muestra."
+
+
