--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -43,7 +43,7 @@ msgstr "Tot el contingut"
 #: genweb.theme/genweb/theme/portlets/fullnews.py:129
 #: genweb.theme/genweb/theme/portlets/news.py:118
 msgid "Aquest portlet mostra noticies"
-msgstr "quest portlet mostra noticies"
+msgstr "Aquest portlet mostra noticies"
 
 #. Default: "Pàgina alternativa"
 msgid "Body text"
@@ -96,12 +96,12 @@ msgstr "Edita portlet colecció"
 
 #: genweb.theme/genweb/theme/portlets/esdeveniments.py:191
 msgid "Edit Events Portlet"
-msgstr "Edita portlet events"
+msgstr "Edita portlet d'agenda"
 
 #: genweb.theme/genweb/theme/portlets/fullnews.py:137
 #: genweb.theme/genweb/theme/portlets/news.py:126
 msgid "Edit News Portlet"
-msgstr "Edita portlet noticies"
+msgstr "Edita portlet de noticies"
 
 #: genweb.banners/genweb/banners/portlets/bannersportlet.py:114
 msgid "Edit banners portlet"
@@ -113,7 +113,7 @@ msgstr "Edició cancel·lada"
 
 #: genweb.theme/genweb/theme/portlets/esdeveniments.py:60
 msgid "Events"
-msgstr "Events"
+msgstr "Agenda"
 
 # Noms de les vistes
 #: genweb.stack/genweb/stack/browser/collage.py:88
@@ -128,14 +128,15 @@ msgstr "Fitxa de grau"
 msgid "Fitxa de màster"
 msgstr "Fitxa de màster"
 
-#: genweb.theme/genweb/theme/portlets/fullnews.py:50
-msgid "Full News"
-msgstr "Notícies amb foto"
 
 ######################
 # Portlet Full News #
 ######################
 #. Default: "Notícies amb foto"
+#: genweb.theme/genweb/theme/portlets/fullnews.py:50
+msgid "Full News"
+msgstr "Notícies amb foto"
+
 msgid "FullNews"
 msgstr "Notícies amb foto"
 
@@ -152,7 +153,7 @@ msgstr "Configuració del Genweb"
 
 #: genweb.banners/genweb/banners/portlets/bannersportlet.py:55
 msgid "Genweb banners"
-msgstr "Genweb banners"
+msgstr "Bàners"
 
 #: genweb.upc/genweb/upc/adapters.py:89
 msgid "Grups de recerca"
@@ -168,7 +169,7 @@ msgstr "Gràcies per la vostra col·laboració. Les dades de l'activitat s'han e
 
 #. Default: "Benvingut"
 msgid "Homepage"
-msgstr "Benvingut"
+msgstr "Benvinguda"
 
 #: genweb.banners/genweb/banners/portlets/bannersportlet.py:30
 msgid "How many banners to list."
@@ -176,7 +177,7 @@ msgstr "Nombre de banners a mostrar"
 
 #: genweb.theme/genweb/theme/portlets/esdeveniments.py:35
 msgid "How many items to list."
-msgstr "Nombre de elements a mostrar"
+msgstr "Nombre d'elements a mostrar"
 
 #. Default: "Esta es la lista de los idiomas del contenido solicitado"
 #: genweb.core/genweb/core/browser/views_templates/not_translated_yet.pt:17
@@ -280,12 +281,12 @@ msgstr "Marca com a important"
 
 #: genweb.controlpanel/genweb/controlpanel/interface.py:33
 msgid "Master"
-msgstr "Master"
+msgstr "Màster"
 
 #: genweb.theme/genweb/theme/portlets/fullnews.py:26
 #: genweb.theme/genweb/theme/portlets/news.py:26
 msgid "Maxim numero de noticies a mostrar (5 o 7)"
-msgstr "Maxim nombre de noticies a mostrar (5 o 7)"
+msgstr "Màxim nombre de noticies a mostrar (5 o 7)"
 
 #: genweb.theme/genweb/theme/portlets/fullnews.py:34
 #: genweb.theme/genweb/theme/portlets/news.py:34
@@ -294,7 +295,7 @@ msgstr "Mostra data?"
 
 #: genweb.theme/genweb/theme/portlets/news.py:50
 msgid "News"
-msgstr "Noticies"
+msgstr "Notícies"
 
 #: genweb.core/genweb/core/browser/viewlets.py:118
 msgid "Not published"
@@ -303,20 +304,20 @@ msgstr "(Idioma no publicat)"
 #. Default: "Noticies"
 #: genweb.theme/genweb/theme/portlets/news.py:44
 msgid "Noticies"
-msgstr "Noticies"
+msgstr "Notícies"
 
 #: genweb.banners/genweb/banners/portlets/bannersportlet.py:29
 msgid "Number of banners to display"
-msgstr "Número de banners a mostrar"
+msgstr "Nombre de bàners a mostrar"
 
 #: genweb.theme/genweb/theme/portlets/esdeveniments.py:34
 msgid "Number of items to display"
-msgstr "Número de elements a mostrar"
+msgstr "Nombre d'elements a mostrar"
 
 #: genweb.theme/genweb/theme/portlets/fullnews.py:25
 #: genweb.theme/genweb/theme/portlets/news.py:25
 msgid "Numero de noticies a mostrar"
-msgstr "Número de noticies a mostrar"
+msgstr "Nombre de notícies a mostrar"
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:90
 msgid "Override query sort order using folder order"
@@ -386,7 +387,7 @@ msgstr "Públic"
 
 #. Default: "Publica el element i el fa visible per tothom."
 msgid "Publishing the item makes it visible to other users."
-msgstr "Publica el element i el fa visible per tothom."
+msgstr "Publica l'element i el fa visible per a tothom."
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:47
 msgid "Renders the header"
@@ -408,7 +409,7 @@ msgstr "Desa"
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:101
 msgid "Select random items"
-msgstr "Seleccina elements aleatoris."
+msgstr "Selecciona elements aleatoris."
 
 #: genweb.theme/genweb/theme/browser/contact.py:98
 msgid "Send"
@@ -416,7 +417,7 @@ msgstr "envia"
 
 #. Default: "Envia el contingut a l'estat de esborrany."
 msgid "Send the item back to draft."
-msgstr "Envia el contingut a l'estat de esborrany."
+msgstr "Envia el contingut a l'estat d'esborrany."
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:108
 msgid "Show more link"
@@ -428,7 +429,7 @@ msgstr "Mostra més enllaços de text."
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:77
 msgid "Sort the collection on this index"
-msgstr "Ordena la col·lecció en aquest index"
+msgstr "Ordena la col·lecció en aquest índex"
 
 #: genweb.smartportlet/genweb/smartportlet/__init__.py:84
 msgid "Sort the results in reversed order"
@@ -479,7 +480,7 @@ msgstr "El portlet mostra les noticies més recents."
 
 #: genweb.banners/genweb/banners/portlets/bannersportlet.py:101
 msgid "This portlet displays the site banners."
-msgstr "El portlet mostra els banners."
+msgstr "El portlet mostra els bàners."
 
 #: genweb.theme/genweb/theme/portlets/esdeveniments.py:183
 msgid "This portlet lists upcoming Events."
@@ -503,7 +504,7 @@ msgstr "Actualitat UPC"
 
 #: genweb.banners/genweb/banners/content/banner.py:24
 msgid "URL to open"
-msgstr ""
+msgstr "Enllaç a obrir"
 
 #: genweb.portlets/genweb/portlets/browser/templates/managehomeportlets.pt:42
 msgid "Warning"
@@ -533,7 +534,7 @@ msgstr "Afegir-los a la pròpia carpeta"
 #. Default: "Amaga de les eines l'enllaç d'identificació"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:213
 msgid "amaga_identificacio"
-msgstr "Amaga de les eines l'enllaç d'identificació"
+msgstr "Amaga l'enllaç d'identificació de les eines"
 
 #. Default: "Avui"
 #: browser/calendar.pt
@@ -548,7 +549,7 @@ msgstr "Tots els esdeveniments"
 #. Default: "Marca com a improtant"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/important.pt:5
 msgid "button_important"
-msgstr "Marca com a improtant"
+msgstr "Marca com a important"
 
 #. Default: "Desmarca com a important"
 #: genweb.theme/genweb/theme/browser/viewlets_templates/important.pt:17
@@ -613,7 +614,7 @@ msgstr "Codi del grau"
 
 #: genweb.upc/genweb/upc/adapters.py:58
 msgid "codi_master"
-msgstr "Codi del master"
+msgstr "Codi del màster"
 
 #: genweb.upc/genweb/upc/adapters.py:76
 msgid "codi_pla_master"
@@ -1315,7 +1316,7 @@ msgstr "Pàgina d'inici"
 
 #. Default: "Benvingut"
 msgid "homepage_portlet"
-msgstr "Benvingut"
+msgstr "Benvinguda"
 
 #. Default: "Menu L2"
 #: genweb.portlets/genweb/portlets/browser/templates/managehomeportlets.pt:77
