--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -369,6 +369,9 @@ msgstr "RSS"
 msgid "portlet_static_title"
 msgstr "Portlet HTML"
 
+msgid "portlet_static"
+msgstr "Portlet HTML"
+
 msgid "portlet_poll_title"
 msgstr "Encuesta"
 
