Change name static portlet

--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -367,10 +367,10 @@ msgid "portlet_rss_title"
 msgstr "RSS"
 
 msgid "portlet_static_title"
-msgstr "Portlet HTML"
+msgstr "Portlet estático"
 
 msgid "portlet_static"
-msgstr "Portlet HTML"
+msgstr "Portlet estático"
 
 msgid "portlet_poll_title"
 msgstr "Encuesta"
