Translate ServeisTIC view

--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -411,3 +411,6 @@ msgstr "Notícies amb foto"
 #: CMFPlone/skins/plone_login/registered.pt:92
 msgid "label_log_in"
 msgstr "Identificació"
+
+msgid "serveistic_view"
+msgstr "Vista ServeisTIC"
