--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -414,3 +414,9 @@ msgstr "Identificació"
 
 msgid "serveistic_view"
 msgstr "Vista ServeisTIC"
+
+#: CMFPlone/skins/plone_login/insufficient_privileges.pt:25
+msgid "label_return_to_page"
+msgstr "Tornar a la pàgina anterior"
+
+
