--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -108,3 +108,6 @@ msgstr "Poll"
 msgid "UPCNews"
 msgstr "UPC Today"
 
+#: CMFPlone/skins/plone_login/insufficient_privileges.pt:25
+msgid "label_return_to_page"
+msgstr "Back to previous page"
