--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -398,3 +398,7 @@ msgstr "Si se activa, la lista no incluirá el elemento actual. El portlet se re
 
 msgid "UPCNews"
 msgstr "Actualidad UPC"
+
+#: CMFPlone/skins/plone_login/insufficient_privileges.pt:25
+msgid "label_return_to_page"
+msgstr "Volver a la página anterior"
