New contents view translation

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -1891,3 +1891,6 @@ msgstr "A validar"
 
 msgid "aValidarValoracio"
 msgstr "A validar valoració"
+
+msgid "contents_pretty_view"
+msgstr "Vista continguts"
