--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -402,3 +402,12 @@ msgstr "Actualidad UPC"
 #: CMFPlone/skins/plone_login/insufficient_privileges.pt:25
 msgid "label_return_to_page"
 msgstr "Volver a la página anterior"
+
+#: ./behaviors/leadimage.py:17
+msgid "Lead Image"
+msgstr "Imagen"
+
+#: ./behaviors/leadimage.py:23
+msgid "Lead Image Caption"
+msgstr "Pie de foto"
+
