--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -112,4 +112,5 @@ msgstr "UPC Today"
 msgid "label_return_to_page"
 msgstr "Back to previous page"
 
-
+msgid "portlet_static_title"
+msgstr "Static portlet"
