--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -1927,3 +1927,6 @@ msgstr "Vista continguts"
 
 msgid "itemstable_view"
 msgstr "Vista amb icones"
+
+msgid "folder_index_view"
+msgstr "Índex de contingut"
