--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1826,3 +1826,15 @@ msgstr "No items"
 
 msgid "folder_index_view"
 msgstr "Contents index"
+
+msgid "see_past_events"
+msgstr "Go to past events"
+
+msgid "back_to_events"
+msgstr "Back to events"
+
+msgid "past_events"
+msgstr "Past events"
+
+msgid "no_events"
+msgstr "There are no events"
