--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -411,3 +411,8 @@ msgstr "Imagen"
 msgid "Lead Image Caption"
 msgstr "Pie de foto"
 
+msgid "Define the search terms for the items you want to list by choosing what to match on. The list of results will be dynamically updated"
+msgstr "Definir los términos de búsqueda de los elementos que desee en la lista. La lista de resultados se actualiza de forma dinámica"
+
+msgid "Number of items that will show up in one batch."
+msgstr "Número de elementos que se mostrará."
