--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1841,3 +1841,15 @@ msgstr "There are no events"
 
 msgid "dontcopy_homepage"
 msgstr "Please note that the welcome page is necessary for the proper functioning of Genweb . Don't delete, copy or rename."
+
+msgid "help_static_content_title_ca"
+msgstr "Optional: portlet title"
+
+msgid "help_static_content_url_ca"
+msgstr "The complete URL of the content's page."
+
+msgid "help_static_content_element_ca"
+msgstr "You can add an id, a class or an html element. For example, in an standard Genweb page, all the content is inside #content and all the content without the title lives inside #content-core"
+
+msgid "Existing Content"
+msgstr "Existing content"
