--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1872,3 +1872,15 @@ msgstr "No hay eventos"
 
 msgid "dontcopy_homepage"
 msgstr " La página de bienvenida es necesaria para el correcto funcionamiento del Genweb. No se tiene que borrar, copiar o renombrar."
+
+msgid "help_static_content_title_ca"
+msgstr "Opcional: título del portlet"
+
+msgid "help_static_content_url_ca"
+msgstr "La URL completa de la página desde dónde queremos visualizar el contenido."
+
+msgid "help_static_content_element_ca"
+msgstr "Aquí se puede introducir un id, clase o elemento html. Por ejemplo, en una página genweb típica, todo el contenido está dentro de #content, y todo el contenido sin el título dentro de #content-core"
+
+msgid "Existing Content"
+msgstr "Contenido existente"
