--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1855,6 +1855,9 @@ msgstr "Vista contenidos"
 msgid "itemstable_view"
 msgstr "Vista con iconos"
 
+msgid "summary_view_news"
+msgstr "Vista noticias"
+
 msgid "folder_index_view"
 msgstr "Índice de contenidos"
 
