--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -114,3 +114,27 @@ msgstr "Back to previous page"
 
 msgid "portlet_static_title"
 msgstr "Static portlet"
+
+############
+# Contacte #
+############
+
+msgid "genweb_sender_fullname"
+msgstr "Name"
+
+msgid "genweb_sender_from_address"
+msgstr "Email address"
+
+msgid "genweb_subject"
+msgstr "Subject"
+
+msgid "genweb_message"
+msgstr "Message"
+
+msgid "genweb_help_message"
+msgstr "Write the massage"
+
+#. Default: "Recipient"
+#: genweb.theme/genweb/theme/browser/contact.py:92
+msgid "to_address"
+msgstr "Contact with"
