--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -1975,3 +1975,49 @@ msgstr "Seleccionar l'adreça d'enviament"
 
 msgid "help_contacte_multi_email"
 msgstr "Es pot seleccionar a qui s'envia el missatge de contacte."
+
+#############################
+# Portlet NewsEventsListing #
+#############################
+
+msgid "mode_future_link"
+msgstr "Dia següent"
+
+msgid "mode_past_link"
+msgstr "Dia anterior"
+
+msgid "mode_month_link"
+msgstr "Mes"
+
+msgid "mode_week_link"
+msgstr "Setmana"
+
+msgid "mode_day_link"
+msgstr "Dia"
+
+msgid "prev_month_link"
+msgstr "Mes anterior"
+
+msgid "this_month_link"
+msgstr "Mes en curs"
+
+msgid "next_month_link"
+msgstr "Pròxim mes"
+
+msgid "prev_week_link"
+msgstr "Setmana anterior"
+
+msgid "this_week_link"
+msgstr "Setmana en curs"
+
+msgid "next_week_link"
+msgstr "Pròxima setmana"
+
+msgid "prev_day_link"
+msgstr "Dia anterior"
+
+msgid "today_link"
+msgstr "Dia"
+
+msgid "next_day_link"
+msgstr "Dia següent"
