--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1860,3 +1860,47 @@ msgstr "Select shipping address"
 
 msgid "help_contacte_multi_email"
 msgstr "You can select the contact who receives the messages."
+
+# Portlet NewsEventsListing
+
+msgid "mode_future_link"
+msgstr ""
+
+msgid "mode_past_link"
+msgstr ""
+
+msgid "mode_month_link"
+msgstr ""
+
+msgid "mode_week_link"
+msgstr ""
+
+msgid "mode_day_link"
+msgstr ""
+
+msgid "prev_month_link"
+msgstr ""
+
+msgid "this_month_link"
+msgstr ""
+
+msgid "next_month_link"
+msgstr ""
+
+msgid "prev_week_link"
+msgstr ""
+
+msgid "this_week_link"
+msgstr ""
+
+msgid "next_week_link"
+msgstr ""
+
+msgid "prev_day_link"
+msgstr ""
+
+msgid "today_link"
+msgstr ""
+
+msgid "next_day_link"
+msgstr ""
