--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -1981,10 +1981,10 @@ msgstr "Es pot seleccionar a qui s'envia el missatge de contacte."
 #############################
 
 msgid "mode_future_link"
-msgstr "Dia següent"
+msgstr "Propers"
 
 msgid "mode_past_link"
-msgstr "Dia anterior"
+msgstr "Passat"
 
 msgid "mode_month_link"
 msgstr "Mes"
@@ -2017,7 +2017,7 @@ msgid "prev_day_link"
 msgstr "Dia anterior"
 
 msgid "today_link"
-msgstr "Dia"
+msgstr "Avui"
 
 msgid "next_day_link"
 msgstr "Dia següent"
