--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1940,3 +1940,18 @@ msgstr ""
 
 msgid "all_news"
 msgstr "Todas las noticias"
+
+msgid "folder_summary_view"
+msgstr "Vista de resumen"
+
+msgid "folder_tabular_view"
+msgstr "Vista tabular"
+
+msgid "folder_full_view"
+msgstr "Todo el contenido"
+
+msgid "atct_album_view"
+msgstr "Album"
+
+msgid "folder_listing"
+msgstr "Vista estándar"
