--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -440,3 +440,6 @@ msgstr "Definir els termes de cerca dels elements que vulgueu a la llista. La ll
 
 msgid "Number of items that will show up in one batch."
 msgstr "Nombre d'elements que es mostrarà."
+
+msgid "Album view"
+msgstr "Album"
