--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1894,46 +1894,48 @@ msgstr "Seleccionar la dirección de envío"
 msgid "help_contacte_multi_email"
 msgstr "Se puede seleccionar la dirección de correo que recibe el mensaje de contacto."
 
-# Portlet NewsEventsListing
+#############################
+# Portlet NewsEventsListing #
+#############################
 
 msgid "mode_future_link"
-msgstr ""
+msgstr "Próximos"
 
 msgid "mode_past_link"
-msgstr ""
+msgstr "Pasados"
 
 msgid "mode_month_link"
-msgstr ""
+msgstr "Mes"
 
 msgid "mode_week_link"
-msgstr ""
+msgstr "Semana"
 
 msgid "mode_day_link"
-msgstr ""
+msgstr "Día"
 
 msgid "prev_month_link"
-msgstr ""
+msgstr "Mes anterior"
 
 msgid "this_month_link"
-msgstr ""
+msgstr "Mes actual"
 
 msgid "next_month_link"
-msgstr ""
+msgstr "Próximo mes"
 
 msgid "prev_week_link"
-msgstr ""
+msgstr "Semana anterior"
 
 msgid "this_week_link"
-msgstr ""
+msgstr "Semana actual"
 
 msgid "next_week_link"
-msgstr ""
+msgstr "Próxima semana"
 
 msgid "prev_day_link"
-msgstr ""
+msgstr "Día anterior"
 
 msgid "today_link"
-msgstr ""
+msgstr "Hoy"
 
 msgid "next_day_link"
-msgstr ""
+msgstr "Día siguiente"
