--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1863,6 +1863,9 @@ msgstr "You can select the contact who receives the messages."
 
 # Portlet NewsEventsListing
 
+msgid "all_news"
+msgstr "All News"
+
 msgid "mode_future_link"
 msgstr ""
 
