--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2021,3 +2021,11 @@ msgstr "Avui"
 
 msgid "next_day_link"
 msgstr "Dia següent"
+
+#########################
+# genweb.upc contact form
+#########################
+
+#: genweb.upc/genweb/upc/browser/contact.py:151
+msgid "The entered text does not match the text in the image"
+msgstr "El text introduït no coincideix amb el de la imatge"
