--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1907,3 +1907,11 @@ msgstr ""
 
 msgid "next_day_link"
 msgstr ""
+
+#########################
+# genweb.upc contact form
+#########################
+
+#: genweb.upc/genweb/upc/browser/contact.py:151
+msgid "The entered text does not match the text in the image"
+msgstr "The entered text does not match the text in the image"
