--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1278,19 +1278,19 @@ msgstr "It is the literal that appears at the bottom of the page or in the alter
 #. Default: "Treu les icones per compartir en xarxes socials ..."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:206
 msgid "help_treu_icones_xarxes_socials"
-msgstr "Show icons to share in social networks ..."
+msgstr "Hide icons to share in social networks ..."
 
 #. "Treiem la imatge de la capçalera per ..."
 #. Default: "Treiem la imatge de la capçalera per ..."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:188
 msgid "help_treu_imatge_capsalera"
-msgstr "Show the header image by .."
+msgstr "Hide the header image by ..."
 
 #. "Treu el menú horitzontal ..."
 #. Default: "Treu el menú horitzontal ..."
 #: genweb.controlpanel/genweb/controlpanel/interface.py:197
 msgid "help_treu_menu_horitzontal"
-msgstr "Show horizontal menu ..."
+msgstr "Hide horizontal menu ..."
 
 #. Default: "Pàgina d'inici"
 msgid "homepage"
@@ -1795,19 +1795,19 @@ msgstr "Click to open UPCmaps"
 #. Default: "Treu les icones per compartir en xarxes socials"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:204
 msgid "treu_icones_xarxes_socials"
-msgstr "Show icons to share in social networks"
+msgstr "Hide icons to share in social networks"
 
 #. "Treu la imatge de la capçalera"
 #. Default: "Treu la imatge de la capçalera"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:186
 msgid "treu_imatge_capsalera"
-msgstr "Show the header image"
+msgstr "Hide the header image"
 
 #. "Treu el menú horitzontal"
 #. Default: "Treu el menú horitzontal"
 #: genweb.controlpanel/genweb/controlpanel/interface.py:195
 msgid "treu_menu_horitzontal"
-msgstr "Show horizontal menu"
+msgstr "Hide horizontal menu"
 
 #: genweb.banners/genweb/banners/content/banner.py:23
 msgid "url"
